# pdf2epub

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/pdf2epub/: __main__.py  cli.py  epub.py  model.py  normalize.py  ocr.py  render.py
src/pdf2epub/styles/: horizontal.css  vertical.css
