[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2epub"
version = "0.1.0"
description = "Convert scanned Japanese PDFs to EPUB 3 with vertical/horizontal writing and ruby support, powered by YomiToku OCR."
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "kuwabara" }]
dependencies = [
    "yomitoku>=0.12.0",
    "ebooklib>=0.18",
    "lxml>=5.0",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/ki-84/pdf2epub"
Issues = "https://github.com/ki-84/pdf2epub/issues"

[project.scripts]
pdf2epub = "pdf2epub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf2epub = ["styles/*.css"]
